<resources>
    <string name="app_name">einstein</string>
    <string name="play">Play</string>
    <string name="TODO">TODO</string>
    <string name="knowledge_vids">Knowledge Vids</string>
    <string name="papers_and_research">Papers and Research</string>
    <string name="online_courses">Online Courses</string>
    <string name="random_fact">Random Fact</string>
    <string name="close">x</string>
    <string name="einsteinOwl">einstein\'s owl</string>
    <string name="comics_xkcd">Comics (xkcd)</string>
    <string name="random">Random</string>
    <string name="search">search</string>
    <string name="go_back">Go back</string>
    <string name="philosophy">Philosophy</string>
    <string name="philosophy_introduction">Philosophy Intro</string>
    <string name="ethics_introduction">Ethics Intro</string>
    <string name="Development">Development</string>
    <string name="maths">Mathematics</string>
    <string name="science">Science</string>
    <string name="humanities">Humanities</string>
    <string name="physics_intro">physics intro</string>
    <string name="geometry_intro">geometry intro</string>
    <string name="algebra_intro">algebra intro</string>
    <string name="calculus_intro">calculus intro</string>
    <string name="logic_intro">logic intro</string>
    <string name="chemistry_intro">chemistry intro</string>
    <string name="biology_intro">biology intro</string>
    <string name="python_intro">python Intro</string>
    <string name="java_intro">Java Intro</string>
    <string name="html_intro">html intro</string>
    <string name="history_intro">History Intro</string>
    <string name="politics_intro">Politics Intro</string>
    <string name="geography_intro">Geography Intro</string>
    <string name="Articles">Articles</string>
    <string name="about">About</string>
    <string name="philosophyIntroAbout">Have you ever had questions that you cannot find an answer? Philosophy is continuously trying to find solutions to issues like that. If you want to have a better critical thinking philosophy is the way to go. This course is going to give a quick course on philosopher and types of philosophy.</string>
    <string name="physicsIntroAbout">Have you ever thought about why things act the way they do or why they move the way they do? Physics means "knowledge of nature" and studies matter, its motion, the behavior through space and time and studies the subsequent energies and forces.</string>
    <string name="level_intermediate">Level Intermediate</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="duration">Duration</string>
    <string name="not_identified">N/D</string>
    <string name="ContentsTitle">Contents</string>
    <string name="philosophyIntroSyllabusContent"><b> Logic</b> - Reasoning and how thoughts should be expressed; recognize fallacies. \n<b> Ethics</b> - Express reasons in support of moral claims; understand that there are better and worse reasons for making a moral decision. \n<b> Metaphysics: Personal Identity</b> - Personal interpretation and recognition of our criteria and the capability of considering that our common sense beliefs of ourselves may be mistaken. \n<b> Metaphysics: Mind-Body Problem</b> - Understand central problems concerning the conception of mind. \n<b> Epistemology</b> - Understand the major philosophical approaches to epistemology and the complexity of how people interact with knowledge. \n<b> Philosophy of Religion</b> - Learn the theistic conception of God and different arguments for the existence of God; Comprehend the dilemma of evil for theistic belief, and understand the complexity of evaluating justified religious belief. </string>
    <string name="start">Start</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="introduction_to_philosophy">Introduction to Philosophy</string>
    <string name="physics_intro_about">Have you ever thought about why things act the way they do or why they move the way they do? Physics means \'knowledge of nature\' and studies matter, its motion, the behavior through space and time and studies the subsequent energies and forces. If you are interested in learning more about your surrounding this course is perfect for you.</string>
    <string name="physicsIntroSyllabusContent"> Principles of Conservation \n Gravitation and the Solar System \n The Special Theory of Relativity \n Thermodynamics \n Sound and Light \n Optical Systems \n The Atom and Radioactivity \n Nuclear Radiation</string>
    <string name="level_difficult">Level Difficult</string>
    <string name="introduction_to_physics">Introduction to Physics</string>
    <string name="articles">Articles</string>
    <string name="what_is_philosophy_article">When people ask me what philosophy is about I tend to use this analogy, philosophy is the soil in a beautiful garden, where trees are subjects like chemistry and physics that is everything that exists - I am pretty sure that someone used that analogy before - everything that is not science yet, all the questions that we do not have data or information about, but that still have great importance, and a significant meaning behind it, a scientist with an open mind is a philosopher, for that reason philosophy should be a full-time job, because it develops a critical thinking and a constant need for discussion. When I try to explain what philosophy is about I typically say this: Philosophy means the love for knowledge, we should have that as a standard. Plato collects Socrates speeches in the "Apology" were you can find the infamous quote "the unexamined life is not worth living," he stated that when he choose dying over Athens (his home) or committing to silence, we should make our life about being better even if life strives to limit you, but that will be discussed later in a different chapter. </string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="logic">Logic</string>
    <string name="level_easy">Level Easy</string>
    <string name="introduction_to_history">Introduction to History</string>
    <string name="historyIntroAbout">History is a very important subject because it shows how the past was, and without the past we lose how future. \n History shows us how we should act and not to make the same mistakes. \n Here you will learn the very basics of history.</string>
    <string name="historyIntroSyllabusContent">First Civilizations \n Age of Exploration \n Industrialism \n World Wars</string>
    <string name="FormalLogicAbout">Formal logic is the study of inference with purely formal content.</string>
    <string name="InformalLogicAbout">Informal logic is the study of natural language arguments.</string>
    <string name="InformalLogic">Informal Logic</string>
    <string name="FormalLogic">Formal Logic</string>
    <string name="SymbolicLogic">Symbolic Logic</string>
    <string name="MathematicalLogic">Mathematical Logic</string>
    <string name="SymbolicLogicAbout">Symbolic logic is the study of symbolic abstractions that capture the formal features of logical inference.</string>
    <string name="MathematicalLogicAbout">Mathematical logic is an extension of symbolic logic into other areas, in particular to the study of model theory, proof theory, set theory, and recursion theory.</string>
    <string name="about_einstein">I am a 16-year-old programmer (at the time of writing) that as always liked to know new things, so I decided to make a app that would help me learn and share it with others. \n This app is a gathering of content that I made and content that I thought it would represent a certain subject in the best way. \n All the work that was used during the making of this app is going to be cited under the about section.</string>
    <string name="n_find_more_in_my_page">Click here to find more in my page</string>
    <string name="app_author">Pedro Victor</string>
    <string name="in_progress">In Progress</string>
    <string name="physicsVote">0</string>
    <string name="introduction_to_geometry">Introduction to Geometry</string>
    <string name="more_tools">More Tools</string>
    <string name="watch_videos_by_youtube">Watch Videos by Youtube</string>
    <string name="all_done">All Done!</string>
    <string name="games">Games</string>


</resources>
