<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="none"
    android:scrollbarThumbVertical="@drawable/ic_search_black_24dp"
    tools:ignore="AdapterViewChildren,UnusedAttribute">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:ignore="AdapterViewChildren">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <ImageButton android:id="@+id/close"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ic_arrow_back_black_24dp"
        android:contentDescription="@string/TODO" />
    <TextView android:id="@+id/title"
        android:layout_weight="19"
        android:paddingStart="20dp"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:textColor="@color/darkBackground"
        android:textStyle="bold"
        android:text="@string/einsteinOwl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:ignore="RtlSymmetry" />

  <Button android:id="@+id/search"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_search_black_24dp"/>

</LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/science"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button android:id="@+id/physicsIntro"
                    android:text="@string/physics_intro"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/chemistryIntro"
                    android:text="@string/chemistry_intro"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:backgroundTint="@android:color/holo_green_dark"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/biologyIntro"
                    android:text="@string/biology_intro"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:backgroundTint="@android:color/holo_purple"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/maths"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry,ScrollViewCount,UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button android:id="@+id/geometry"
                    android:text="@string/geometry_intro"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/algebra"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:text="@string/algebra_intro"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/calculus"
                    android:text="@string/calculus_intro"
                    android:backgroundTint="@color/dOrange"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>


    <LinearLayout
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/philosophy"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button android:id="@+id/philosophyIntro"
                    android:text="@string/philosophy_introduction"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:backgroundTint="@color/dPurple"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/ethicsIntro"
                    android:text="@string/ethics_introduction"
                    android:textColor="@android:color/white"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:backgroundTint="@android:color/holo_purple"
                    android:layout_height="180dp"

                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/logicIntro"
                    android:text="@string/logic_intro"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:backgroundTint="@color/lightPurple"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>


    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/Development"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry,ScrollViewCount,UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

            <Button android:id="@+id/javaIntro"
                android:text="@string/java_intro"
                android:layout_marginStart="20sp"
                android:layout_marginEnd="10dp"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/coffee"
                style="@style/AppTheme.RoundedCornerMaterialButton"/>

            <Button android:id="@+id/pythonIntro"
                android:layout_marginEnd="10dp"
                android:text="@string/python_intro"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/pythonBlue"
                style="@style/AppTheme.RoundedCornerMaterialButton"/>

            <Button android:id="@+id/htmlIntro"
                android:text="@string/html_intro"
                android:layout_marginEnd="10dp"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:backgroundTint="@color/dimGrey"
                style="@style/AppTheme.RoundedCornerMaterialButton"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>



    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:text="@string/humanities"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <HorizontalScrollView
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="RtlSymmetry,ScrollViewCount,UselessParent">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button android:id="@+id/historyIntro"
                    android:text="@string/history_intro"
                    android:backgroundTint="@android:color/holo_red_light"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/politicsIntro"
                    android:text="@string/politics_intro"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"/>

                <Button android:id="@+id/geographyIntro"
                    android:text="@string/geography_intro"
                    android:backgroundTint="@android:color/holo_orange_dark"
                    android:layout_marginEnd="10dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton" />

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

</LinearLayout>
</ScrollView>