<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dGrey"
    tools:context=".courses.PhilosophyIntroActivity">


    <ImageView
        android:id="@+id/courseImg"
        android:src="@drawable/philointrocourse"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/TODO" />


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="always"
        tools:ignore="UselessParent">


        <LinearLayout
        android:background="@drawable/course_info_box"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="220dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:textColor="@color/darkBackground"
            android:textAlignment="center"
            android:text="@string/introduction_to_philosophy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="14dp"
            android:background="@null"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/about"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />


        <TextView
            android:text="@string/philosophyIntroAbout"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
            <LinearLayout
                android:background="@drawable/difficulty_gradient_intermediente"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">

            <TextView
                android:text="@string/level_intermediate"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            </LinearLayout>
<LinearLayout
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false">

                <LinearLayout
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/dGrey"
                    android:layout_marginBottom="5dp"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/language"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:textColor="@color/dimGrey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:text="@string/english"/>

                </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:background="@color/dGrey"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

        <TextView
            android:text="@string/duration"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/dimGrey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:text="@string/not_identified"/>

    </LinearLayout>


</LinearLayout>


                <TextView
                    android:layout_marginStart="14dp"
                    android:textSize="20sp"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/ContentsTitle"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/philosophyIntroSyllabusContent"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:textAllCaps="false"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/philosophyIntroSyllabusEthics"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/philosophyIntroSyllabusMetaphysicsPI"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:textAllCaps="false"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/philosophyIntroSyllabusMetaphysicsMBP"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/philosophyIntroSyllabusEpistemology"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textAllCaps="false"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_height="wrap_content" />
            <TextView
                android:text="@string/philosophyIntroSyllabusReligion"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:background="@drawable/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        tools:ignore="UselessParent">
        <Button
            android:id="@+id/goBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/ic_arrow_back_black_24dp"
            android:backgroundTint="@android:color/white"
            tools:ignore="ButtonStyle" />

        <View
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="@drawable/course_info_box"/>

        <Button
            android:id="@+id/startLearning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:text="@string/start"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</FrameLayout>